--- a/doc/Interni/Norme_di_progetto/Norme_di_progetto_0_0_5.tex
+++ b/doc/Interni/Norme_di_progetto/Norme_di_progetto_0_0_5.tex
@@ -116,7 +116,7 @@ Il presente documento si divide in tre sezioni principali:
 			\end{itemize}
 			\item[Tipo] indica il tipo del requisito, che può essere:
 			\begin{itemize}
-				\item \textbf{F}: funzionale;
+				\item \textbf{F}: funzionale (cioè un servizio che il prodotto è tenuto a fornire);
 				\item \textbf{Q}: di qualità;
 				\item \textbf{P}: prestazionale;
 				\item \textbf{V}: di vincolo.
@@ -156,10 +156,10 @@ Il presente documento si divide in tre sezioni principali:
 	% Il compito dei progettisti consiste di progettare l'architettura del software. % da completare.
 	% La fase di progettazione deve utilizzare come diagrammi \gloss{UML} quelli sotto descritti,in riferimento allo standard UML 2.0:
 	% \begin{itemize}
-		% \item \gloss{Diagrammi delle classi}:descrivono i tipi di entità(classi) e le relazioni tra loro.
-		% \item \gloss{Diagrammi dei package}:raggruppa un numero di elementi UML in una sola unità di livello più alto.
-		% \item \gloss{Diagrammi di attività}:descrive in dettaglio un algoritmo
-		% \item \gloss{Diagrammi di sequenza}:descrive uno scenario,dove le azioni sono disposte in sequenza e le varie scelte sono già state prese.
+		% \item \gloss{Diagramma delle classi}: descrive i tipi di entità(classi) e le relazioni tra loro.
+		% \item \gloss{Diagramma dei package}: raggruppa un numero di elementi UML in una sola unità di livello più alto.
+		% \item \gloss{Diagramma di attività}: descrive in dettaglio un algoritmo
+		% \item \gloss{Diagramma di sequenza}: descrive uno scenario, dove le azioni sono disposte in sequenza e le varie scelte sono già state prese.
 	% \end{itemize}
 	\subsubsection{Codifica} \label{sec:cod}
 	% stessa cosa di sopra
