--- a/doc/util/hx-ambiente.tex
+++ b/doc/util/hx-ambiente.tex
@@ -13,9 +13,10 @@
 \usepackage{listings}
 \usepackage{eurosym}
 \usepackage{float}
-\usepackage{hyperref}
-
 \usepackage[table]{xcolor}
+\usepackage{hyperref}
+\hypersetup{hidelinks}
+
 
 \usepackage{../../util/hx-vers}
 \usepackage{../../util/hx-macro}
