--- a/doc/Esterni/Piano_di_progetto/diario.tex
+++ b/doc/Esterni/Piano_di_progetto/diario.tex
@@ -2,13 +2,15 @@
 % da includere con \include{diario}
 
 \begin{diario}
-	0.0.6 & {\PB} Responsabile & 07/12/2016 &  Stesura Organigramma  \\ \hline
-	0.0.6 & {\LB} Responsabile & 06/12/2016 &  Stesura Consuntivo di Periodo  \\ \hline
-	0.0.6 & {\LB} Responsabile & 05/12/2016 &  Stesura Preventivo di Periodo  \\ \hline
-	0.0.6 & {\LB} Responsabile & 05/12/2016 &  Inserimento Gantt Diagrammi delle Attività  \\ \hline
-	0.0.5 & {\PB} Responsabile & 29/12/2016 &  Stesura Pianificazione delle Attività  \\ \hline
-	0.0.4 & {\PB} Responsabile & 28/12/2016 &  Stesura Introduzione  \\ \hline
-	0.0.3 & {\LB} Responsabile & 27/12/2016 & Inizio stesura Modello di sviluppo\\ \hline
-	0.0.2 & {\PB} Responsabile & 27/12/2016 & Stesura Analisi dei Rischi\\ \hline
-	0.0.1 & {\LB} Responsabile & 25/12/2016 & Stesura scheletro \\ \hline
+	1.0.0 & {\PB} (Responsabile) & 09/01/2017 & Approvazione documento \\ \hline
+	0.1.0 & {\MM} (Verificatore) & 07/01/2017 & Verifica documento \\ \hline
+	0.0.9 & {\PB} (Responsabile) & 05/01/2017 & Stesura Organigramma \\ \hline
+	0.0.8 & {\LB} (Responsabile) & 05/01/2017 & Stesura Consuntivo di Periodo \\ \hline
+	0.0.7 & {\LB} (Responsabile) & 04/01/2017 & Stesura Preventivo di Periodo \\ \hline
+	0.0.6 & {\LB} (Responsabile) & 03/01/2017 & Inserimento Gantt Diagrammi delle Attività \\ \hline
+	0.0.5 & {\PB} (Responsabile) & 29/12/2016 & Stesura Pianificazione delle Attività \\ \hline
+	0.0.4 & {\PB} (Responsabile) & 28/12/2016 & Stesura Introduzione \\ \hline
+	0.0.3 & {\LB} (Responsabile) & 27/12/2016 & Stesura Modello di sviluppo \\ \hline
+	0.0.2 & {\PB} (Responsabile) & 27/12/2016 & Stesura Analisi dei Rischi \\ \hline
+	0.0.1 & {\LB} (Responsabile) & 26/12/2016 & Stesura scheletro \\ \hline
 \end{diario}
