--- a/doc/Esterni/Piano_di_progetto/Rev_Piano_Progetto.tex
+++ b/doc/Esterni/Piano_di_progetto/Rev_Piano_Progetto.tex
@@ -373,11 +373,11 @@ Nota: la "dipendenza all'indietro" che sembra esistere tra \emph{Redazione Norme
 	\\ Questo periodo inizia successivamente alla formazione del gruppo e finisce in corrispondenza della consegna dei documenti per la \emph{Revisione dei Requisiti}.
 	Questo perido prevede che vengano stilati i seguenti documenti:
 	\begin{description}
-		\item[Norme di Progetto] in questo documento sono inserite tutte le norme che il \gloss{team} dovrà seguire e rispettare durante l'intero svolgimento delle attività. Tale documento è redatto dall'\AMx{}, mentre il \Vx{} ha il compito di certificare che tali norme siano state rispettate da tutto il gruppo;
+		\item[Norme di Progetto] in questo documento sono inserite tutte le norme che il team dovrà seguire e rispettare durante l'intero svolgimento delle attività. Tale documento è redatto dall'\AMx{}, mentre il \Vx{} ha il compito di certificare che tali norme siano state rispettate da tutto il gruppo;
 		\item[Studio di Fattibilità] in questo documento vengono analizzati i vari capitolati proposti. Per ogni capitolato, è stato analizzato il dominio applicativo/tecnologico e sono state inserite delle considerazioni in merito agli aspetti positivi e negativi;
 		\item[Analisi dei requisiti] in questo documento sono raccolti tutti i requisiti progettuali necessari per comprendere più approfonditamente	il capitolato scelto con lo \emph{Studio di Fattibilità};
 		\item[Piano di Progetto] questo documento è redatto dal \emph{Responsibile di Progetto} che organizza tutte le attività e stima le risorse, costi e tempi necessari per lo svolgimento del progetto;
-		\item[Piano di Qualifica] questo documento è redatto dal \Vx{} che individua tutte le strategie di verifica e validazione che il \gloss{team} deve adottare per il progetto per ottenere e consegnare un prodotto di qualità;
+		\item[Piano di Qualifica] questo documento è redatto dal \Vx{} che individua tutte le strategie di verifica e validazione che il team deve adottare per il progetto per ottenere e consegnare un prodotto di qualità;
 		\item[Glossario] questo documento viene steso da tutti i redattori in parallelo alla stesura degli altri documenti; esso contiene la spiegazione di alcuni termini presenti nei vari documenti al fine di chiarire il significato del termine stesso;
 		\item[Lettera di presentazione] questo documento viene presentato al committente al fine di mostrare l'interesse del gruppo di partecipare alla gara d'appalto.
 	\end{description}
@@ -592,7 +592,7 @@ Questo costo viene fornito a scopo informativo e rappresenta l'investimento effe
 
 Gli sforzi maggiori si evidenziano nel ruolo di:
 \begin{itemize}
-\item {\AMx} a causa dell'impegno aggiuntivo dedicato alla creazione di un proprio \gloss{Way of Working};
+\item {\AMx} a causa dell'impegno aggiuntivo dedicato alla creazione di un proprio \emph{Way of Working};
 \item {\ANx} per gli sforzi impiegati a raggiungere una comprensione profonda dei requisiti del progetto affrontato.
 \end{itemize}
 
