--- a/doc/util/hx-macro.sty
+++ b/doc/util/hx-macro.sty
@@ -40,7 +40,7 @@ Per rendere più facile la lettura, i termini presenti nel glossario saranno mar
 \newcommand{\ZU}{Zucchetti S.P.A.}
 
 % Segnatura dei termini nel glossario:
-\newcommand{\gloss}[1]{\textsc{#1}\ped{$\gamma$}}
+\newcommand{\gloss}[1]{\textsc{#1}\ped{$\mathcal{G}$}}
 
 % Ambiente da usare per il diario delle modifiche:
 \newenvironment{diario}{
