mancavano dei caption, verifica generale

--- a/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_5.tex
+++ b/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_5.tex
@@ -549,6 +549,7 @@ Di seguito si riporta il costo della #1.
     
   \end{tabular}
 }
+\caption{Ore/ruolo per persona nella fase di \AR.}
 
 %\vspace*{1 cm}
 \end{figure}
@@ -617,7 +618,7 @@ Gli sforzi maggiori si evidenziano nel ruolo di:
 \makebox[\textwidth][c]{
 \includegraphics[width=1.05\textwidth]{img/costoar.png}\par
 }
-\caption{Costo {\AR} per ruolo, valori in euro}
+\caption{Costo {\AR} per ruolo, valori in euro (\euro).}
 \label{fig:car}
 \end{figure}
 
@@ -662,6 +663,8 @@ Gli sforzi maggiori si evidenziano nel ruolo di:
     
   \end{tabular}
 }
+\caption{Ore/ruolo per persona nella fase di \ARI.}
+
 \end{figure} 
 % i colori danno problemi di visualizzazione alle linee
 \pagebreak
@@ -690,7 +693,7 @@ Gli sforzi maggiori si evidenziano nel ruolo di:
 \introcosto{\ARI}
 Questo costo rappresenta gli sforzi che {\hx} affronterà al fine di consolidare la comprensione dei requisiti del progetto.
 
-Tale periodo è ridotto rispetto a quanto desiderato in quanto coincidente con la sessione d'esami dell'Università degli studi di Padova. % togliere?
+Tale periodo è ridotto rispetto a quanto desiderato in quanto coincidente con la sessione d'esami dell'Università degli Studi di Padova. % togliere?
 
 Gli sforzi maggiori si evidenziano nel ruolo di:
 \begin{itemize}
@@ -726,7 +729,10 @@ Gli sforzi maggiori si evidenziano nel ruolo di:
 
 \begin{figure}[H]
 \makebox[\textwidth][c]{
-\includegraphics[width=1.2\textwidth]{img/costoari.png}}
+\includegraphics[width=1.2\textwidth]{img/costoari.png}
+}
+\caption{Costo {\ARI} per ruolo, valori in euro (\euro).}
+
 
 \end{figure}
 
@@ -758,6 +764,7 @@ Gli sforzi maggiori si evidenziano nel ruolo di:
     
   \end{tabular}
 }
+\caption{Ore/ruolo per persona nella fase di \PA.}
 \end{figure} 
 % i colori danno problemi di visualizzazione alle linee
 \pagebreak
@@ -808,6 +815,7 @@ Gli sforzi maggiori si evidenziano nel ruolo di:
     \rowcolor[gray]{.9}
 
     Totale euro/ruolo & 150 & 60 & 0 & 4928 & 0 & 330 & 5468 \\ \hline
+    
   \end{tabular}
   
 }\label{tab:cpa}
@@ -818,6 +826,7 @@ Gli sforzi maggiori si evidenziano nel ruolo di:
 \begin{figure}[H]
 \makebox[\textwidth][c]{
 \includegraphics[width=1.2\textwidth]{img/costopa.png}}
+  \caption{Costo \PA{} per ruolo e per persona, valori in euro (\euro).}
 \end{figure}
 
 \pagebreak[4]
@@ -847,6 +856,8 @@ Gli sforzi maggiori si evidenziano nel ruolo di:
     
   \end{tabular}
   }
+    \caption{Ore/ruolo per persona nella fase di \PDC.}
+
 \end{figure} 
 % i colori danno problemi di visualizzazione alle linee
 
@@ -915,7 +926,7 @@ Gli sforzi maggiori si evidenziano nel ruolo di:
 \includegraphics[width=1.2\textwidth]{img/costopdc.png}}
 \label{tab:cpdc}
 
-  \caption{Tabella costo {\PDC} per ruolo e per persona, valori in euro (\euro).}
+  \caption{Costo {\PDC} per ruolo, valori in euro (\euro).}
 \end{figure}
 
 \pagebreak[4]
@@ -945,6 +956,8 @@ Gli sforzi maggiori si evidenziano nel ruolo di:
     
   \end{tabular}
   }
+  \caption{Ore/ruolo per persona nella fase di \VV.}
+\label{fig:vv1}
 \end{figure} 
 % i colori danno problemi di visualizzazione alle linee
 
@@ -1010,7 +1023,7 @@ Gli sforzi maggiori si evidenziano nel ruolo di:
 \includegraphics[width=1.2\textwidth]{img/costovv.png}}
 \label{tab:cvv}
 
-  \caption{Tabella costo {\VV} per ruolo e per persona, valori in euro (\euro).}
+  \caption{Costo {\VV} per ruolo, valori in euro (\euro).}
 \end{figure}
 
 \pagebreak[4]
